refactor: add SubmitButton

--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -24,19 +24,12 @@
       margin: auto;
     }
 
-    .submit {
+    button {
       margin-top: 32px;
       display: flex;
       align-items: center;
       justify-content: center;
-      &:disabled {
-        background: $disabled-background;
-        color: $disabled-color;
-        &:hover {
-          opacity: 1;
-          cursor: auto;
-        }
-      }
+
       .spinner {
         margin-top: 16px;
       }
