refactor: improve input layout

--- a/src/presentation/styles/colors.scss
+++ b/src/presentation/styles/colors.scss
@@ -6,3 +6,5 @@ $primary-dark: #560027;
 $primary-light: #bc477b;
 $disabled-background: #ccc;
 $disabled-color: #666;
+$success: #4caf50;
+$danger: #ef5350;
