--- a/src/presentation/components/input/input-styles.scss
+++ b/src/presentation/components/input/input-styles.scss
@@ -5,17 +5,33 @@
   position: relative;
   border-bottom: 2px dashed $disabled-color;
 
+  &[data-status='valid'] {
+    border-bottom-color: $success;
+
+    &::after {
+      background-color: $success;
+    }
+  }
+
+  &[data-status='invalid'] {
+    border-bottom-color: $danger;
+
+    &::after {
+      background-color: $danger;
+    }
+  }
+
   &::after {
     content: '';
     width: 100%;
     height: 2px;
-    background-color: $primary-light;
+    background-color: $disabled-color;
     position: absolute;
     bottom: -2px;
     left: 0px;
     transform-origin: 0%;
     transform: scaleX(0);
-    transition: transform 500ms ease;
+    transition: transform 400ms ease;
   }
 
   &:focus-within {
