feat: add initial survey-list view

--- a/src/presentation/pages/signup/signup-styles.scss
+++ b/src/presentation/pages/signup/signup-styles.scss
@@ -1,6 +1,6 @@
 @import '../../styles/colors';
 
-.signup {
+.signupWrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
