--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -1,6 +1,6 @@
 @import '../../styles/colors';
 
-.login {
+.loginWrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
