--- a/src/presentation/pages/survey-list/survey-list-styles.scss
+++ b/src/presentation/pages/survey-list/survey-list-styles.scss
@@ -97,6 +97,25 @@
             linear-gradient(to right, rgba($white, 0.1), rgba($white, 0.1));
           background-position: 0 0, 54 0;
           background-size: 54px 100%, 100% 100%;
+          position: relative;
+
+          .iconWrapper {
+            top: -10px;
+            right: -10px;
+            position: absolute;
+            padding: 10px;
+            border-radius: 100%;
+            display: flex;
+            box-shadow: 0px 1px 3px -1px $black;
+
+            &.red {
+              background-color: $danger;
+            }
+
+            &.green {
+              background-color: $success;
+            }
+          }
 
           time {
             display: flex;
