--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     width: 400px;
+    max-width: 90%;
     background: $white;
     padding: 20px 40px 40px;
     border-radius: 8px;
