--- a/src/presentation/components/spinner/spinner-styles.scss
+++ b/src/presentation/components/spinner/spinner-styles.scss
@@ -7,6 +7,10 @@
   width: 32px;
   height: 32px;
   animation: spin 2s linear infinite;
+
+  &.negative {
+    border-top: 4px solid $primary-light !important;
+  }
 }
 
 @keyframes spin {
