--- a/src/presentation/components/spinner/spinner-styles.scss
+++ b/src/presentation/components/spinner/spinner-styles.scss
@@ -8,7 +8,103 @@
   height: 32px;
   animation: spin 2s linear infinite;
 
-  &.negative {
+  &.negative {@import '../../styles//colors.scss';
+
+    .surveyResultWrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 100vh;
+      background: $disabled-background;
+    
+      .contentWrapper {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        max-width: 800px;
+        width: 100%;
+        flex-grow: 1;
+        padding: 40px;
+    
+        h2 {
+          color: $primary-dark;
+          font-size: 20px;
+          font-weight: bold;
+        }
+    
+        .answers-list {
+          list-style: none;
+          display: flex;
+          flex-direction: column;
+    
+          li {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            background-color: $white;
+            align-items: center;
+            padding: 16px;
+            border-radius: 8px;
+            color: $primary-dark;
+            margin-top: 16px;
+    
+            &:active {
+              border: 2px solid $primary-light;
+            }
+    
+            img {
+              width: 50px;
+              height: 50px;
+            }
+    
+            .answer {
+              flex-grow: 1;
+              margin: 0 16px;
+              font-size: 20px;
+            }
+    
+            .percent {
+              font-size: 30px;
+            }
+          }
+        }
+    
+        button {
+          margin-top: 24px;
+        }
+    
+        .loadingWrapper {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: rgba($white, .8);
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          cursor: wait;
+    
+          .loading {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: rgba($black, .9);
+            width: 300px;
+            height: 150px;
+            border-radius: 8px;
+            
+            span {
+              color: $white;
+              font-size: 16px;
+              margin-bottom: 8px;
+              text-transform: lowercase;
+            }
+          }
+        }
+      }
+    }
     border-top: 4px solid $primary-light !important;
   }
 }
