--- a/src/presentation/pages/survey-list/components/item/item-styles.scss
+++ b/src/presentation/pages/survey-list/components/item/item-styles.scss
@@ -30,31 +30,9 @@
       position: absolute;
     }
 
-    time {
-      display: flex;
-      flex-direction: column;
-      background: $primary-light;
-      color: $white;
-      border-radius: 8px;
+    .calendar-wrapper {
       margin-left: 24px;
-      align-items: center;
       align-self: center;
-      width: 60px;
-      height: 100px;
-      flex-shrink: 0;
-
-      .day {
-        font-size: 40px;
-        font-weight: bold;
-      }
-      .month {
-        font-size: 14px;
-        text-transform: lowercase;
-        margin: 0px 0px 5px;
-      }
-      .year {
-        font-size: 16px;
-      }
     }
 
     p {
