--- a/src/presentation/components/calendar/calendar-styles.scss
+++ b/src/presentation/components/calendar/calendar-styles.scss
@@ -7,6 +7,7 @@
   color: $white;
   border-radius: 8px;
   align-items: center;
+  justify-content: center;
   width: 60px;
   height: 100px;
   flex-shrink: 0;
