--- a/src/presentation/pages/survey-result/survey-result-styles.scss
+++ b/src/presentation/pages/survey-result/survey-result-styles.scss
@@ -1,11 +1,12 @@
 @import '../../styles//colors.scss';
+@import '../../styles/animations.scss';
 
 .surveyResultWrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
-  background: $disabled-background;
+  background: $background;
 
   .contentWrapper {
     display: flex;
@@ -15,6 +16,33 @@
     width: 100%;
     flex-grow: 1;
     padding: 40px;
+
+    &:empty {
+      position: relative;
+      background-repeat: no-repeat;
+      background-image: linear-gradient(to right, $disabled-background, $disabled-background),
+        linear-gradient(to right, $disabled-background, $disabled-background),
+        linear-gradient(to right, $disabled-background, $disabled-background),
+        linear-gradient(to right, $disabled-background, $disabled-background),
+        linear-gradient(to right, $disabled-background, $disabled-background),
+        linear-gradient(to right, $disabled-background, $disabled-background),
+        linear-gradient(to right, $disabled-background, $disabled-background);
+      background-position: 40px 40px, 136px 50px, 136px 80px, 136px 110px, 40px 172px, 40px 270px, 40px 368px;
+      background-size: 80px 100px, calc(100% - 176px) 20px, calc(90% - 176px) 20px, calc(60% - 176px) 20px,
+        calc(100% - 80px) 82px, calc(100% - 80px) 82px, calc(100% - 80px) 82px;
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 50%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        transform: translateX(-100%);
+        background-image: linear-gradient(to right, transparent, rgba($white, 0.2), transparent);
+        animation: shimmer 1.2s infinite;
+      }
+    }
 
     hgroup {
       display: flex;
@@ -73,6 +101,47 @@
 
     button {
       margin-top: 24px;
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .surveyResultWrapper {
+    .contentWrapper {
+      &:empty {
+        position: relative;
+        background-repeat: no-repeat;
+        background-position: 40px 40px, 116px 50px, 116px 80px, 116px 110px, 40px 172px, 40px 260px, 40px 348px;
+        background-size: 60px 100px, calc(100% - 176px) 20px, calc(90% - 176px) 20px, calc(60% - 176px) 20px,
+          calc(100% - 80px) 72px, calc(100% - 80px) 72px, calc(100% - 80px) 72px;
+      }
+
+      hgroup {
+        h2 {
+          font-size: 20px;
+        }
+
+        .calendar-wrapper {
+          width: 60px;
+        }
+      }
+
+      .answers-list {
+        li {
+          img {
+            width: 40px;
+            height: 40px;
+          }
+
+          .answer {
+            font-size: 16px;
+          }
+
+          .percent {
+            font-size: 20px;
+          }
+        }
+      }
     }
   }
 }
