refactor: change SurveyResult highlight item

--- a/src/presentation/pages/survey-result/survey-result-styles.scss
+++ b/src/presentation/pages/survey-result/survey-result-styles.scss
@@ -78,8 +78,8 @@
         color: $primary-dark;
         margin-top: 16px;
 
-        &:active {
-          border: 2px solid $primary-light;
+        &.active {
+          box-shadow: 0 0 3px 2px $primary-light;
         }
 
         img {
