--- a/src/presentation/pages/survey-list/components/item/item-styles.scss
+++ b/src/presentation/pages/survey-list/components/item/item-styles.scss
@@ -45,12 +45,17 @@
 
   footer {
     background: $primary;
-    color: $white;
-    line-height: 40px;
-    text-transform: lowercase;
-    text-align: center;
     cursor: pointer;
     border-radius: 0px 0px 8px 8px;
+
+    a {
+      text-align: center;
+      text-transform: lowercase;
+      color: $white;
+      line-height: 40px;
+      display: block;
+      text-decoration: none;
+    }
 
     &:hover {
       background: $primary-dark;
